BUG-121970 MetaTableAccessor changes in HBASE-22777 break phoenix(Istvan Toth <stoty@cloudera.com>)
Change-Id: I429b991f28d166e0a5576f6f09442823b2d85202